fix(popover): WHCM visible border

--- a/components/popover/index.css
+++ b/components/popover/index.css
@@ -47,7 +47,13 @@ governing permissions and limitations under the License.
   /* --spectrum-popover-overlay-animation-distance: calc(var(--spectrum-popover-tip-height) + var(--spectrum-popover-spacing-to-source)); */
 }
 
-/* outer container to control spacing around component */
+/* windows high contrast mode */
+@media (forced-colors: active) {
+  .spectrum-Popover {
+    --spectrum-popover-border-color: CanvasText;
+  }
+}
+
 .spectrum-Popover {
    @inherit: %spectrum-overlay;
 
